--- a/SpeechToText/Base.lproj/Main.storyboard
+++ b/SpeechToText/Base.lproj/Main.storyboard
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +14,68 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SpeechToText" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap button to start voice recognition" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nDe-6C-V47">
+                                <rect key="frame" x="48" y="60" width="278" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="L4K-db-Dck"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zxU-sx-wHw">
+                                <rect key="frame" x="133" y="126" width="109" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="363-KP-iEY"/>
+                                </constraints>
+                                <state key="normal" title="Live recognition"/>
+                                <connections>
+                                    <action selector="startButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xQ2-3O-ImV"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pwL-hg-kol">
+                                <rect key="frame" x="134" y="164" width="96" height="30"/>
+                                <state key="normal" title="From local file"/>
+                                <connections>
+                                    <action selector="localFileButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d1X-Cu-6vM"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="EDc-MG-5Vp">
+                                <rect key="frame" x="16" y="213" width="350" height="434"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="nDe-6C-V47" firstAttribute="centerX" secondItem="zxU-sx-wHw" secondAttribute="centerX" id="9BS-dz-DrB"/>
+                            <constraint firstItem="pwL-hg-kol" firstAttribute="top" secondItem="zxU-sx-wHw" secondAttribute="bottom" constant="8" symbolic="YES" id="C84-uc-elT"/>
+                            <constraint firstItem="pwL-hg-kol" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="134" id="E2Y-r3-8jr"/>
+                            <constraint firstItem="zxU-sx-wHw" firstAttribute="top" secondItem="nDe-6C-V47" secondAttribute="bottom" constant="45" id="Gwc-7d-ltT"/>
+                            <constraint firstItem="nDe-6C-V47" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="RUf-36-PQj"/>
+                            <constraint firstItem="nDe-6C-V47" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ToP-e4-dkw"/>
+                            <constraint firstItem="EDc-MG-5Vp" firstAttribute="top" secondItem="pwL-hg-kol" secondAttribute="bottom" constant="19" id="V2f-Is-XWE"/>
+                            <constraint firstAttribute="bottom" secondItem="EDc-MG-5Vp" secondAttribute="bottom" constant="20" symbolic="YES" id="fYX-tU-DYy"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EDc-MG-5Vp" secondAttribute="trailing" constant="9" id="gmb-bt-vbB"/>
+                            <constraint firstItem="EDc-MG-5Vp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="l5Z-fL-oei"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pwL-hg-kol" secondAttribute="trailing" constant="20" symbolic="YES" id="qa8-8z-iaW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="detectedText" destination="EDc-MG-5Vp" id="fJb-mm-FLx"/>
+                        <outlet property="startButton" destination="zxU-sx-wHw" id="cQV-Gs-ZIx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
